--- a/css/partials/_variables.scss
+++ b/css/partials/_variables.scss
@@ -9,3 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nosifer&family=Unbounded:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nosifer&family=Unbounded:wght@200&display=swap');
+
+$mainColor: rgb(228, 228, 80);
+
+$fontKanit: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
