--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nosifer&family=Unbounded:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nosifer&family=Unbounded:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@300&family=Nosifer&family=Oswald&family=Roboto+Condensed&family=Unbounded:wght@200&display=swap');
 
 $mainColor: rgb(228, 228, 80);
 
